--- a/index.html
+++ b/index.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>htetwailwin</title>
+    <script>
+        alert('hello')
+    </script>
+    <style>
+    body{
+        color: blanchedalmond;
+    background-color: rgb(255, 240, 240);
+    }
+    </style>
 </head>
 <body>
-    Welcome to Zero to Pro CS Bootcamp Level-4 Batch-11
-</body>
+
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+
+    <p>This is paragraph 1</p>
+    <p>This is paragraph 2</p>
+
+   first <div style="color: blue;">
+    This is a division with  <span style="color: brown;">normal text</span>  color and testing
+ </div>last
+
+    <a href="about.html" title="Go to About Page"> About </a>
+
+    <a href="https://www.myanmaritc.com">Myanmar ITC</a>
+
+    <a href="https://www.google.com"><img src="1.jpg" alt="This is a logo"></a>
+
+    Welcome to <em>Zero to Pro </em> CS Boot camp  <strong>Level-4 </strong> Batch-11
+
+    <br>
+
+    <img src="1.jpg" alt="This is a logo">
+
+
+
 </html>
