--- a/index.html
+++ b/index.html
@@ -5,45 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>htetwailwin</title>
+    <title>Htet Wai Lwin</title>
+
     <script>
-        alert('hello')
+    alert("Hello,Welcome")
     </script>
+
     <style>
-    body{
-        color: blanchedalmond;
-    background-color: rgb(255, 240, 240);
-    }
-    </style>
+body{
+color: rgb(48, 42, 165);
+background-color: rgba(0, 0, 0, 0);
+}
+ </style>
+
+
+
 </head>
 <body>
+<a href="about.html">Go to page and grab it</a>
 
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
+<h1>Asian Princess</h1>
 
-    <p>This is paragraph 1</p>
-    <p>This is paragraph 2</p>
+<a href="https://www.google.com">Cottonon</a><img src="download (1).jpg" alt="Asian Princess">
 
-   first <div style="color: blue;">
-    This is a division with  <span style="color: brown;">normal text</span>  color and testing
- </div>last
+<p>50$</p>
 
-    <a href="about.html" title="Go to About Page"> About </a>
+<p>This item is out of stock</p>
 
-    <a href="https://www.myanmaritc.com">Myanmar ITC</a>
+<p>This is a <em>rare dress</em>...if you found it, <strong>grab it wisely</strong></p>
 
-    <a href="https://www.google.com"><img src="1.jpg" alt="This is a logo"></a>
 
-    Welcome to <em>Zero to Pro </em> CS Boot camp  <strong>Level-4 </strong> Batch-11
 
-    <br>
 
-    <img src="1.jpg" alt="This is a logo">
+<h1>Hyper Dress</h1>
 
+<a href="https://www.google.com">Cottonon</a><img src="download (2).jpg" alt="Hyper Dress">
+
+<p>90$</p>
+
+<p>This is in stock</p>
+
+<p>This is not as rare as above one..but it is a better quality version</p>
+<br>
+
+    
+<div style="color: blue;">
+ 
+    All these items can be got in our shop. If you need something ,<span style="color: brown;">contact us immediately</span> 
+
+</div>
 
 
 </html>
