--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ background-color: rgba(0, 0, 0, 0);
 
 </head>
 <body>
+
+    <a href="a1/a1.html">Assignment 1</a>
 <a href="about.html">Go to page and grab it</a>
 
 <h1>Asian Princess</h1>
@@ -54,6 +56,6 @@ background-color: rgba(0, 0, 0, 0);
     All these items can be got in our shop. If you need something ,<span style="color: brown;">contact us immediately</span> 
 
 </div>
-
-
+<img src="images/2.png" alt="this is a logo">
+<body>
 </html>
