--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
     <script>
     alert("Hello,Welcome")
     </script>
-
+    
     <style>
 body{
 color: rgb(48, 42, 165);
@@ -22,7 +22,7 @@ background-color: rgba(0, 0, 0, 0);
 
 </head>
 <body>
-<a href="about.html">Go to page and grab it</a>
+<a href="about.html" title="see detail">about page</a>
 
 <h1>Asian Princess</h1>
 
