--- a/HTML/Link/pages/services.html
+++ b/HTML/Link/pages/services.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <a href="../index.html">HOME</a>
-        <a href="service.html">SERVICES</a>
+        <a href="services.html">SERVICES</a>
         <a href="content.html">CONTENT</a>
         <a href="about.html">ABOUT</a>
     </nav>
