--- a/HTML/form.html
+++ b/HTML/form.html
@@ -29,6 +29,29 @@
         <input type="radio" name="gender" id="female" value="female"><label for="female">Female</label>
         <input type="radio" name="gender" id="other" value="other"><label for="other">Other</label>
         <br><br>
+        <label for="">Hobby</label>
+        <br>
+        <input type="checkbox" name="stu_reading" id="reading" value="reading"><label for="reading">Reading</label>
+        <input type="checkbox" name="stu_gaming" id="gaming" value="gaming"><label for="gaming">Gaming</label>
+        <br><br>
+        <select name="year" id="year">
+            <option value="">Choose your year</option>
+            <option value="First">First Year</option>
+            <option value="Second">Second Year</option>
+            <option value="Third">Third Year</option>
+        </select>
+        <br><br>
+        <label for="dob">Birthday</label>
+        <input type="date" name="stu_dob" id="dob">
+        <br><br>
+        <label for="address">Address</label>
+        <textarea name="stu_address" id="address" cols="30" rows="10"></textarea>
+        <br><br>
+        <input type="time" name="stu_time" id="">
+        <input type="datetime-local" name="stu_datetime-local" id="">
+        <input type="color" name="stu_color" id="">
+        <input type="range" name="stu_range" id="">
+        <br><br>
         <button type="submit">Submit</button>
 
     </form>
