--- a/HTML/Link/index.html
+++ b/HTML/Link/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">HOME</a>
-        <a href="pages/services.html">SERVICES</a>
-        <a href="pages/content.html">CONTENT</a>
-        <a href="pages/about.html">ABOUT</a>
+        <a href="index.html">HOME</a> |
+        <a href="pages/services.html">SERVICES</a> |
+        <a href="pages/content.html">CONTENT</a> |
+        <a href="pages/about.html">ABOUT</a> |
     </nav>
     <div>
        <h1>This is HOME Page</h1>
