--- a/HTML/Link/pages/services.html
+++ b/HTML/Link/pages/services.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <nav>
-        <a href="../index.html">HOME</a>
-        <a href="services.html">SERVICES</a>
-        <a href="content.html">CONTENT</a>
-        <a href="about.html">ABOUT</a>
+        <a href="../index.html">HOME</a> |
+        <a href="services.html">SERVICES</a> |
+        <a href="content.html">CONTENT</a> |
+        <a href="about.html">ABOUT</a> |
     </nav>
     <div>
 <h1>This is SERVICES page.</h1>
