--- a/HTML/form.html
+++ b/HTML/form.html
@@ -31,8 +31,8 @@
         <br><br>
         <label for="">Hobby</label>
         <br>
-        <input type="checkbox" name="stu_reading" id="reading" value="reading"><label for="reading">Reading</label>
-        <input type="checkbox" name="stu_gaming" id="gaming" value="gaming"><label for="gaming">Gaming</label>
+        <input type="checkbox" name="reading" id="reading" value="reading"><label for="reading">Reading</label>
+        <input type="checkbox" name="gaming" id="gaming" value="gaming"><label for="gaming">Gaming</label>
         <br><br>
         <select name="year" id="year">
             <option value="">Choose your year</option>
@@ -47,10 +47,10 @@
         <label for="address">Address</label>
         <textarea name="stu_address" id="address" cols="30" rows="10"></textarea>
         <br><br>
-        <input type="time" name="stu_time" id="">
-        <input type="datetime-local" name="stu_datetime-local" id="">
-        <input type="color" name="stu_color" id="">
-        <input type="range" name="stu_range" id="">
+        <input type="time" name="time" id="">
+        <input type="datetime-local" name="datetime-local" id="">
+        <input type="color" name="color" id="">
+        <input type="range" name="range" id="">
         <br><br>
         <button type="submit">Submit</button>
 
