--- a/HTML/comment.html
+++ b/HTML/comment.html
@@ -26,7 +26,16 @@
         <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
         <br><br>
         <button type="submit">Add</button>
-
     </form>
+    <br><br>
+    <br><br>
+    <br><br>
+    <hr>
+    <footer>
+        <p align="center">&copy; by Htet Wai Lwin... All right reserve ... Made with love...
+        </p>
+    
+        </footer>
 </body>
+
 </html>
