--- a/JavaScript/intro.html
+++ b/JavaScript/intro.html
@@ -17,6 +17,35 @@
         console.log(sum);
         var Firstname = 'suzy';
         console.log(Firstname);
+
+        var name = "Htet Wai Lwin";
+        console.log(name);
+        console.log(typeof(name));
+        var job = "Developer";
+        console.log(job);
+        console.log(typeof(job));
+        var part_timr_job = "Doctor";
+        console.log(part_timr_job);
+        console.log(typeof(part_timr_job));
+        var age = 25;
+        console.log(age);
+        console.log(typeof(age));
+        var js = true;
+        console.log(js);
+        console.log(typeof(js));
+        var java = false;
+        console.log(java);
+        console.log(typeof(java));
+        var arr = ["a","b",34,true, 2];
+        console.log(arr);
+        console.log(typeof(arr));
+        var car = { name: "Toyota", color: "black", price: 20000000};
+        console.log(car);
+        console.log(car.name);
+        console.log(car.color);
+        console.log(car.price);
+        console.log(car['price'])
+        console.log(typeof(car));
     </script>
     
 </body>
